--- a/css/common.css
+++ b/css/common.css
@@ -37,7 +37,6 @@ float: right;
     outline: none;
     font-size: 16px;
     line-height: 20px;
-
 }
 
 .btn {
@@ -127,11 +126,13 @@ border-right: none;
    min-height:2.6rem !important;
  }
  .other{
- padding-top:50px
+ padding-top:50px;
+ background: #f5f5f5
  }
  .ange{
    color: #999;
-   font-size: 16px
+   font-size: 16px;
+   background: #fff
  }
 .aui-col-xs-4 .wechat{
   color: #62b900
